# Annie-Mie-Client

./: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt  websocket_client.py
.claude/: settings.local.json
.cursor/rules/: rules.mdc
backend/: bridge_server.py
camera_app/: camera_window.py  main.py
core/: __init__.py  semantic_recognition.py  speech_detection.py  tag_parser.py
data/identities/: embeddings.npy  identities.json
detector/: __init__.py  face_detector.py  semantic_recognition.py  speech_detector.py
handler/: __init__.py  camera_window.py  identity_manager.py  stream_parser.py  tts_sequence.py
handlers/: __init__.py  tts_handler.py
identity/: __init__.py  identity_manager.py  identity_store.py
network/: __init__.py  bridge_server.py  llm_client.py
recorder/: Cargo.toml  pyproject.toml
recorder/src/: audio.rs  config.rs  frame_buffer.rs  lib.rs  vad.rs  video.rs
utils/: __init__.py  logger.py
web/: App.tsx  README.md  declarations.d.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
web/components/: Avatar3D.tsx  ChatBar.tsx  ControlPanel.tsx  ServerSimulator.tsx  SettingsButton.tsx  StatusPanel.tsx  Visualizer.tsx
web/services/: liveClient.ts
